Bug 276602. The rects added to the space manager are not real rects; they are still significant if empty. r+sr=dbaron